fix: center lone article on small tablet

--- a/styles/pages/index.styl
+++ b/styles/pages/index.styl
@@ -9,6 +9,7 @@
   article
     text-align center
     max-width 640px
+    margin 0 auto
 
     & > a
       --size 140px
@@ -51,7 +52,6 @@
   +above('tablet')
     flex-direction row
     align-items center
-    justify-content center
 
     article
       flex 1
